--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -84,7 +84,8 @@
       text-align: left;
       padding: 10px;
       font-size: 24px;
-      
+      border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+      backdrop-filter: blur(5px);
       font-family: Arial, sans-serif;
       z-index: 1000;
     }
