--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -98,9 +98,17 @@
 </head>
 <body>
   <header>
-    <h1>inSight</h1>
+    <nav style="display: flex; justify-content: space-between; align-items: center; padding: 0 20px;">
+      <h1>inSight</h1>
+      <ul style="list-style: none; display: flex; gap: 20px; margin: 0; padding: 0;">
+        <li><a href="index.html" style="text-decoration: none; color: white;">Home</a></li>
+        <li><a href="about.html" style="text-decoration: none; color: white;">About Us</a></li>
+        <li><a href="contact.html" style="text-decoration: none; color: white;">Contact</a></li>
+        <li><a href="login.html" style="text-decoration: none; color: white;">Login</a></li>
+      </ul>
+    </nav>
   </header>
-
+  <div></div>  
   <div id="block-container">
     <div class="rounded-box">
       <h4>Input</h4>
