--- a/Frontend/Pages/login.html
+++ b/Frontend/Pages/login.html
@@ -63,7 +63,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><h1>inSight</h1></header>
+    <header>
+        <nav style="display: flex; justify-content: space-between; align-items: center; padding: 0 20px;">
+            <h1>inSight</h1>
+            <ul style="list-style: none; display: flex; gap: 20px; margin: 0; padding: 0;">
+              <li><a href="index.html" style="text-decoration: none; color: white;">Home</a></li>
+              <li><a href="about.html" style="text-decoration: none; color: white;">About Us</a></li>
+              <li><a href="contact.html" style="text-decoration: none; color: white;">Contact</a></li>
+              <li><a href="login.html" style="text-decoration: none; color: white;">Login</a></li>
+            </ul>
+          </nav>
+    </header>
     <div class="wrapper">
         <div class="rounded rounded-box"
             <h1>Welcome to inSight</h1>
